fixed incorrect margin in list items on mobile

--- a/_scss/site/partials/_donate.scss
+++ b/_scss/site/partials/_donate.scss
@@ -160,7 +160,7 @@
           }
           ul.list {
             li {
-              margin-bottom: 20px;
+              margin-bottom: 30px;
             }
           }
         }
